améliorations premium page CSS v10

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <div class="training-content">
             <div class="training-text reveal-left">
                 <h3>Des équipes plus efficaces, sans stress technologique</h3>
-                <p>Vos collaborateurs méritent de maîtriser les outils qui leur simplifieront le quotidien. Formations conçues pour les entreprises et associations de Liège et Wallonie qui souhaitent maîtriser les outils et les méthodes d'une gestion administrative moderne et performante. De la digitalisation aux principes de l'IA appliquée au business, mes interventions sont pratiques et orientées résultats.</p>
+                <p>Vos collaborateurs méritent de maîtriser les outils qui leur simplifieront le quotidien. Formations conçues pour les entreprises et associations à Liège et en Wallonie qui souhaitent maîtriser les outils et les méthodes d'une gestion administrative moderne et performante. De la digitalisation aux principes de l'IA appliquée au business, nos interventions sont pratiques et orientées résultats.</p>
                 <ul>
                     <li><i class="fas fa-chalkboard-teacher"></i> Ateliers pratiques sur la digitalisation adapté à votre contexte</li>
                     <li><i class="fas fa-robot"></i> Découverte progressive de l'IA appliquée</li>
@@ -624,7 +624,7 @@
             <div class="container">
                 <div class="contact-content">
                     <div class="contact-info reveal-left">
-                        <h2>Contactez-moi</h2>
+                        <h2>Contactez-nous</h2>
                         <div class="contact-details">
                             <div class="contact-item">
                                 <i class="fas fa-phone"></i>
@@ -721,7 +721,7 @@
         <!-- Phrase SEO entre partenaires et footer -->
         <section class="seo-phrase-section">
             <div class="container">
-                <p class="seo-phrase-text">Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie.<br>Audit, digitalisation, gestion documentaire, créances et formations IA.</p>
+                <p class="seo-phrase-text">Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie.<br>Audit, digitalisation, gestion documentaire, créances et formations IA appliquée.</p>
             </div>
         </section>
     </main>
