--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <p class="tagline">Vous perdez trop de temps dans l'administratif ? Nous transformons vos contraintes en processus fluides qui vous ressemblent.</p>
                     <p class="hero-description">Nous sommes votre équipe de copilotes business. Nous aidons les TPE, PME et ASBL vers une organisation administrative performante : diagnostic structuré et solutions sur mesure → mise en place → accompagnement au changement.</p>
                     <div class="hero-cta">
-                        <a href="https://tidycal.com/pack-audit-express/appel-decouverte" class="btn btn-primary" target="_blank">On en parle ?</a>
+                        <a href="https://calendar.app.google/2rYQBhP3iSjpkPHB9" class="btn btn-primary" target="_blank">On en parle ?</a>
                         <a href="#contact" class="btn btn-secondary">Nous contacter</a>
                     </div>
                 </div>
