améliorations couleurs sections v6

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
 <body>
     <div class="scroll-progress"></div>
     
+    <!-- Bouton WhatsApp flottant -->
+    <a href="https://wa.me/32498788354?text=Bonjour%20Laetitia,%20j'aimerais%20échanger%20sur%20mes%20besoins%20administratifs" 
+       class="whatsapp-float" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       title="Contactez-nous sur WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+    
     <!-- Bannière de cookies -->
     <div id="cookie-banner" class="cookie-banner">
         <div class="cookie-content">
