--- a/index.html
+++ b/index.html
@@ -713,6 +713,10 @@
 
         <section id="partners" class="section-padding">
             <div class="container">
+                <div class="section-header text-center reveal">
+                    <h2>Ils nous font confiance</h2>
+                    <p>Partenaires et clients qui nous font confiance pour leur transformation administrative</p>
+                </div>
                 <div class="partners-grid reveal">
                     <div class="partner-logo">
                         <img src="public/logo demirtechnics.png" alt="Logo Demirtechnics" loading="lazy">
