--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
             <ul class="nav-menu">
                 <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="#conseils" class="nav-link">Conseils</a></li>
-                <li><a href="#approach" class="nav-link">Approche</a></li>
                 <li><a href="#projects" class="nav-link">Projets</a></li>
+                <li><a href="#approach" class="nav-link">Approche</a></li>
                 <li><a href="#about" class="nav-link">À propos</a></li>
                 <li><a href="#faq" class="nav-link">FAQ</a></li>
                 <li><a href="#contact" class="nav-link contact-btn">Contact</a></li>
@@ -715,7 +715,6 @@
             <div class="container">
                 <div class="section-header text-center reveal">
                     <h2>Ils nous font confiance</h2>
-                    <p>Partenaires et clients qui nous font confiance pour leur transformation administrative</p>
                 </div>
                 <div class="partners-grid reveal">
                     <div class="partner-logo">
@@ -783,5 +782,6 @@
             window.location.replace(window.location.origin + '/');
         }
     </script>
+    <script src="debug-form.js"></script>
 </body>
 </html>
