--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                         </div>
                     </div>
                     <div class="contact-form reveal-right">
-    <form id="contactForm" action="https://formspree.io/f/mjkwqowb" method="POST" novalidate>
+    <form id="contactForm" action="https://formspree.io/f/mjkwqowb" method="POST">
         <div class="form-group">
             <label for="name">Nom complet *</label>
             <input type="text" id="name" name="name" required>
@@ -703,13 +703,9 @@
             <input type="checkbox" id="privacy" required style="width: auto;">
             <label for="privacy">J'accepte la <a href="privacy.html">politique de confidentialité</a> *</label>
         </div>
+        <input type="hidden" name="_subject" id="subjectField" value="Nouvelle demande de contact">
         <button type="submit" class="btn btn-primary btn-full">Demander un premier échange</button>
         <p id="formMessage" style="margin-top: 1rem; color: #7DA87B; font-weight: 500; min-height: 20px;"></p>
-        <noscript>
-            <p style="color: #3b82f6; font-weight: 600; margin-top: 1rem;">
-                ⚠️ JavaScript désactivé - Le formulaire sera soumis directement à Formspree
-            </p>
-        </noscript>
     </form>
 </div>
                 </div>
