améliorations formulaire de contact v4

--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="contact-form reveal-right">
+                    <div class="contact-form">
     <form id="contactForm" action="https://formspree.io/f/mjkwqowb" method="POST">
         <div class="form-group">
             <label for="name">Nom complet *</label>
