--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
                         </div>
                     </div>
                     <div class="contact-form">
-    <form id="contactForm" action="https://formspree.io/f/mjkwqowb" method="POST" onsubmit="submitForm(event)">
+    <form id="contactForm" action="https://formspree.io/f/mjkwqowb" method="POST">
         <div class="form-group">
             <label for="name">Nom complet *</label>
             <input type="text" id="name" name="name" required>
