améliorations cartes conseils v8

--- a/index.html
+++ b/index.html
@@ -445,16 +445,17 @@
         <section id="training-conference" class="section-padding bg-light"> <div class="container">
         <div class="section-header reveal">
             <h2>Formations & Conférences</h2>
-            <p>Partagez les clés de l'efficacité administrative et de l'intégration technologique</p>
+            <p>Partagez les clés d'une organisation administrative efficace et d'une intégration technologique réussie.</p>
         </div>
         <div class="training-content">
             <div class="training-text reveal-left">
                 <h3>Des équipes plus efficaces, sans stress technologique</h3>
-                <p>Vos collaborateurs méritent de maîtriser les outils qui leur simplifieront le quotidien. Formations conçues pour les entreprises et associations à Liège et en Wallonie qui souhaitent maîtriser les outils et les méthodes d'une gestion administrative moderne et performante. De la digitalisation aux principes de l'IA appliquée au business, nos interventions sont pratiques et orientées résultats.</p>
+                <p>Vos collaborateurs méritent de maîtriser les outils qui simplifient leur quotidien. Nos formations s'adressent aux entreprises et associations à Liège et en Wallonie souhaitant améliorer leur gestion administrative grâce à des méthodes modernes et performantes.</p>
+                <p>De la digitalisation aux principes de l'IA appliquée au business, nos interventions sont pratiques et orientées résultats.</p>
                 <ul>
                     <li><i class="fas fa-chalkboard-teacher"></i> Ateliers pratiques sur la digitalisation adapté à votre contexte</li>
-                    <li><i class="fas fa-robot"></i> Découverte progressive de l'IA appliquée</li>
-                    <li><i class="fas fa-users"></i> Conférences inspirantes sur l'efficacité business</li>
+                    <li><i class="fas fa-robot"></i> Découverte progressive de l'IA appliquée à vos processus métier</li>
+                    <li><i class="fas fa-users"></i> Conférences interactives pour inspirer vos équipes et diffuser les bonnes pratiques</li>
                 </ul>
             </div>
             <div class="training-media reveal-right">
@@ -1091,8 +1092,9 @@
         transform: translate(-50%, -50%) !important;
         width: 700px !important;
         max-width: 95vw !important;
-        height: 90vh !important;
-        max-height: 90vh !important;
+        height: auto !important;
+        max-height: 70vh !important;
+        min-height: 400px !important;
         z-index: 10000 !important;
         background: white !important;
         border: 2px solid #0055ff !important;
@@ -1161,9 +1163,10 @@
         .conseil-card.selected {
             width: 95vw !important;
             max-width: 95vw !important;
-            height: 90vh !important;
-            max-height: 90vh !important;
-            top: 5% !important;
+            height: auto !important;
+            max-height: 80vh !important;
+            min-height: 300px !important;
+            top: 10% !important;
             left: 50% !important;
             transform: translateX(-50%) !important;
             padding: 1.5rem !important;
