améliorations cartes conseils v13

--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
                     <div class="credential">
                         <i class="fas fa-clock"></i>
                         <div>
-                            <h4>Application de gestion du temps nouvelle génération</h4>
-                            <p>Conçue spécifiquement pour les consultants qui en ont assez des outils compliqués. Gestion intuitive des taux par projet, facturation simplifiée, suivi en temps réel.</p>
+                            <h4>Application de gestion du temps et facturation nouvelle génération</h4>
+                            <p>Conçue spécifiquement pour les consultants qui en ont assez des outils compliqués. Gestion intuitive des taux par projet, <strong>facturation simplifiée</strong>, suivi en temps réel et génération automatique des devis.</p>
                             <div class="benefit-subtle">Bientôt disponible</div>
                         </div>
                     </div>
