--- a/index.html
+++ b/index.html
@@ -196,7 +196,13 @@
                     </div>
                 </div>
                 <div class="hero-image reveal-right">
-                    <img src="public/copilote-laetitia-vanderheyden.jpg" alt="Consultance administrative à Liège — audit, optimisation et digitalisation pour PME/ASBL" width="900" height="600" loading="eager" decoding="async">
+                    <img src="public/copilote-laetitia-vanderheyden.jpg" 
+                         alt="Laetitia Vanderheyden - Consultance administrative à Liège, audit, optimisation et digitalisation pour PME/ASBL" 
+                         width="900" 
+                         height="600" 
+                         loading="eager" 
+                         decoding="async"
+                         fetchpriority="high">
                 </div>
             </div>
         </section>
@@ -459,7 +465,14 @@
                 </ul>
             </div>
             <div class="training-media reveal-right">
-                <img src="public/formation-ia-consultance-LV.jpg" alt="Formation IA appliquée et digitalisation PME à Liège" class="img-fluid" width="600" height="400" loading="lazy" decoding="async">
+                <img src="public/formation-ia-consultance-LV.jpg" 
+                     alt="Formation IA appliquée et digitalisation PME à Liège - Ateliers pratiques et découverte progressive de l'intelligence artificielle" 
+                     class="img-fluid" 
+                     width="500" 
+                     height="400" 
+                     loading="eager" 
+                     decoding="async"
+                     fetchpriority="high">
                 <a href="https://tidycal.com/pack-audit-express/programme-personnalise-formation-conference" class="btn btn-primary mt-3" target="_blank" rel="noopener noreferrer">Demandez un programme personnalisé</a>
                 </div>
         </div>
@@ -499,7 +512,11 @@
                 <div class="about-intro-section">
                         <div class="about-image reveal-left">
                             <img src="public/copilote-laetitia-vanderheyden1.jpg" 
-                                 alt="Laetitia Vanderheyden, consultante en transformation administrative">
+                                 alt="Laetitia Vanderheyden, consultante en transformation administrative - Fondatrice d'Adminetech SRL" 
+                                 width="300" 
+                                 height="400" 
+                                 loading="lazy" 
+                                 decoding="async">
                         </div>
             
             <div class="about-main-content">
