--- a/index.html
+++ b/index.html
@@ -531,24 +531,26 @@
                 formMessage.innerHTML = `
                     <div style="background: linear-gradient(135deg, #0A4D68 0%, #088395 100%); 
                                 color: white; 
-                                padding: 1.25rem 1.5rem; 
-                                border-radius: 12px; 
-                                box-shadow: 0 4px 20px rgba(10, 77, 104, 0.25);
-                                border: 1px solid rgba(255, 255, 255, 0.1);
-                                margin-top: 1rem;">
-                        <div style="display: flex; align-items: center; gap: 1rem;">
-                            <div style="background: rgba(255,255,255,0.15); 
+                                padding: 2rem 2.5rem; 
+                                border-radius: 16px; 
+                                box-shadow: 0 8px 32px rgba(10, 77, 104, 0.4);
+                                border: 2px solid rgba(255, 255, 255, 0.2);
+                                margin-top: 1.5rem;
+                                animation: slideIn 0.3s ease-out;">
+                        <div style="display: flex; align-items: center; gap: 1.5rem;">
+                            <div style="background: rgba(255,255,255,0.25); 
                                        border-radius: 50%; 
-                                       width: 40px; 
-                                       height: 40px; 
+                                       width: 60px; 
+                                       height: 60px; 
                                        display: flex; 
                                        align-items: center; 
                                        justify-content: center;
-                                       font-size: 1.25rem;
-                                       flex-shrink: 0;">✓</div>
+                                       font-size: 2rem;
+                                       flex-shrink: 0;
+                                       box-shadow: 0 4px 12px rgba(0,0,0,0.2);">✓</div>
                             <div style="flex: 1;">
-                                <h4 style="margin: 0 0 0.25rem 0; font-size: 1.1rem; font-weight: 600; font-family: 'Lora', serif;">Message envoyé avec succès</h4>
-                                <p style="margin: 0; opacity: 0.95; font-size: 0.9rem; line-height: 1.4;">Merci ${name} ! Je vous répondrai sous 24 heures ouvrées.</p>
+                                <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; font-weight: 700; font-family: 'Lora', serif; text-shadow: 0 2px 4px rgba(0,0,0,0.2);">Message envoyé avec succès</h4>
+                                <p style="margin: 0; opacity: 1; font-size: 1.1rem; line-height: 1.5; font-weight: 500;">Merci ${name} ! Je vous répondrai sous 24 heures ouvrées.</p>
                             </div>
                         </div>
                     </div>
