amélioration 2 images header et background webp

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="hero-right">
                         <div class="hero-visual">
                             <div class="hero-image">
-                                <img src="public/Gemini_Generated_Image_page_accueil_header.png" alt="Consultante administrative Laetitia Vanderheyden travaillant avec client TPE PME Province de Liège - Gestion administrative et optimisation processus" loading="eager">
+                                <img src="public/Gemini_Generated_Image_page_accueil_header.webp" alt="Consultante administrative Laetitia Vanderheyden travaillant avec client TPE PME Province de Liège - Gestion administrative et optimisation processus" loading="eager">
                 </div>
                             </div>
                         </div>
