Gestion améliorations insight perfomance site v2

--- a/merci-tarifs.html
+++ b/merci-tarifs.html
@@ -33,7 +33,7 @@
         <nav class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="public/logo-laetitia-vanderheyden-noir.png" alt="Laetitia Vanderheyden - Consultante administrative indépendante Liège Wallonie" height="50">
+                    <img src="public/logo-laetitia-vanderheyden-noir.webp" alt="Laetitia Vanderheyden - Consultante administrative indépendante Liège Wallonie" height="50">
                 </a>
             </div>
             <ul class="nav-menu">
