--- a/privacy.html
+++ b/privacy.html
@@ -85,7 +85,7 @@
         <nav class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="public/logo-laetitia-vanderheyden-noir.png" alt="Laetitia Vanderheyden - Consultante administrative indépendante Liège Wallonie" height="50">
+                    <img src="public/logo-laetitia-vanderheyden-noir.webp" alt="Laetitia Vanderheyden - Consultante administrative indépendante Liège Wallonie" height="50">
                     <div class="logo-text">
                         <span>Laetitia Vanderheyden</span>
                         <span>Consultante administrative indépendante • Gestion administrative • Optimisation • Conseils</span>
