--- a/approche.html
+++ b/approche.html
@@ -38,7 +38,7 @@
         <nav class="container">
             <div class="logo">
                 <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
-                    <img src="public/logo-laetitia-vanderheyden-noir.png" alt="Laetitia Vanderheyden - Consultante administrative indépendante Liège Wallonie" height="50">
+                    <img src="public/logo-laetitia-vanderheyden-noir.webp" alt="Laetitia Vanderheyden - Consultante administrative indépendante Liège Wallonie" height="50">
                 </a>
             </div>
             <button class="menu-toggle" id="mobile-menu" aria-label="Menu mobile">
