modif tarifs réception via email incorrecte

--- a/apropos.html
+++ b/apropos.html
@@ -256,8 +256,8 @@
     <div id="tarifs-modal" class="modal">
         <div class="modal-content">
             <span class="modal-close">&times;</span>
-            <h2>Recevoir mes tarifs détaillés</h2>
-            <p style="margin-bottom: 2rem; color: var(--text-light);">Remplissez ce formulaire pour recevoir ma grille tarifaire complète par email.</p>
+            <h2>Accéder à mes tarifs détaillés</h2>
+            <p style="margin-bottom: 2rem; color: var(--text-light);">Remplissez ce formulaire avec votre email pour télécharger directement ma grille tarifaire complète (PDF).</p>
             <form id="tarifsForm" action="https://formspree.io/f/mjkwqowb" method="POST">
                 <input type="hidden" name="_subject" value="Demande de tarifs - Laetitia Vanderheyden">
                 <input type="hidden" name="_next" value="merci-tarifs.html">
@@ -289,7 +289,7 @@
                     <label for="tarifs-rgpd">J'accepte que mes données soient utilisées pour me contacter concernant ma demande de tarifs. <a href="privacy.html" target="_blank" style="color: var(--accent); text-decoration: underline;">Politique de confidentialité</a> *</label>
                 </div>
                 
-                <button type="submit" class="btn btn-primary" style="width: 100%;">Recevoir mes tarifs</button>
+                <button type="submit" class="btn btn-primary" style="width: 100%;">Télécharger les tarifs</button>
                 <p class="form-message" style="margin-top: 1.5rem;"></p>
             </form>
         </div>
