--- a/index.html
+++ b/index.html
@@ -630,8 +630,8 @@
     <div id="tarifs-modal" class="modal">
         <div class="modal-content">
             <span class="modal-close">&times;</span>
-            <h2>Recevoir mes tarifs détaillés</h2>
-            <p style="margin-bottom: 2rem; color: var(--text-light);">Remplissez ce formulaire pour recevoir ma grille tarifaire complète par email.</p>
+            <h2>Accéder à mes tarifs détaillés</h2>
+            <p style="margin-bottom: 2rem; color: var(--text-light);">Remplissez ce formulaire avec votre email pour télécharger directement ma grille tarifaire complète (PDF).</p>
             <form id="tarifsForm" action="https://formspree.io/f/mjkwqowb" method="POST">
                 <input type="hidden" name="_subject" value="Demande de tarifs - Laetitia Vanderheyden">
                 <input type="hidden" name="_next" value="merci-tarifs.html">
@@ -667,7 +667,7 @@
                     <div class="g-recaptcha" data-sitekey="6LeZggksAAAAAEf-VPGAnlPT1DXuBDl5FxFpgdlB"></div>
                 </div>
                 
-                <button type="submit" class="btn btn-primary" style="width: 100%;">Recevoir mes tarifs</button>
+                <button type="submit" class="btn btn-primary" style="width: 100%;">Télécharger les tarifs</button>
                 <p class="form-message" style="margin-top: 1.5rem;"></p>
             </form>
         </div>
