--- a/services.html
+++ b/services.html
@@ -312,7 +312,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Laetitia Vanderheyden - Adminetech<sup style="font-size: 0.7em; vertical-align: super;">®</sup> SRL. Tous droits réservés.</p>
+                <p>&copy; 2025-2026 Laetitia Vanderheyden - Adminetech<sup style="font-size: 0.7em; vertical-align: super;">®</sup> SRL. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
