--- a/privacy.html
+++ b/privacy.html
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>Copyright © 2025 Laetitia Vanderheyden. Tous droits réservés.</p>
+                <p>Copyright © 2025-2026 Laetitia Vanderheyden. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
