--- a/merci-tarifs.html
+++ b/merci-tarifs.html
@@ -90,7 +90,7 @@
                 <div class="footer-left">
                     <img src="public/logo-laetitia-vanderheyden-blanc.png" alt="Laetitia Vanderheyden - Consultante administrative indépendante Liège" class="footer-logo">
                     <p>Consultante Administrative Indépendante</p>
-                    <p>Adminetech<sup style="font-size: 0.7em; vertical-align: super;">®</sup> SRL • BE1012.752.452</p>
+                    <p>Adminetech SRL • BE1012.752.452</p>
                 </div>
                 <div class="footer-center">
                     <h4>Navigation</h4>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025-2026 Laetitia Vanderheyden - Adminetech<sup style="font-size: 0.7em; vertical-align: super;">®</sup> SRL. Tous droits réservés.</p>
+                <p>&copy; 2025-2026 Laetitia Vanderheyden - Adminetech SRL. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
