--- a/privacy.html
+++ b/privacy.html
@@ -202,7 +202,7 @@
                     <img src="public/logo-laetitia-vanderheyden-blanc.png" alt="Laetitia Vanderheyden - Consultante administrative indépendante Liège" class="footer-logo">
                     <p>Laetitia Vanderheyden</p>
                     <p>Consultante Administrative Indépendante</p>
-                    <p>Adminetech<sup style="font-size: 0.7em; vertical-align: super;">®</sup> SRL • BE1012.752.452</p>
+                    <p>Adminetech SRL • BE1012.752.452</p>
                     <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.85;"><a href="https://www.chronobizz.be" target="_blank" rel="noopener noreferrer" style="color: var(--background); text-decoration: underline;">Chronobizz</a> - Logiciel de suivi du temps et de facturation</p>
                     <p style="margin-top: 0.5rem; font-size: 0.85rem; opacity: 0.7;"><a href="#" id="tarifs-link" style="color: var(--background); text-decoration: none; border-bottom: 1px dotted rgba(255,255,255,0.5); cursor: pointer;">Tarifs détaillés</a></p>
                 </div>
