--- a/apropos.html
+++ b/apropos.html
@@ -76,6 +76,10 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     
+    <!-- Start cookieyes banner -->
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/dc1682d1493c9195a0178aaa7d875580/script.js"></script>
+    <!-- End cookieyes banner -->
+    
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
