bannir les mots compta...v2

--- a/services.html
+++ b/services.html
@@ -183,7 +183,7 @@
                     <div class="service-card">
                         <div class="service-tag">Exécution</div>
                         <h3>Gestion administrative courante</h3>
-                        <p>Vous déléguez vos tâches administratives courantes : facturation, relances clients, suivi des paiements, encodages précomptables. <strong>Vous récupérez du temps pour votre activité principale.</strong></p>
+                        <p>Vous déléguez vos tâches administratives courantes : facturation, relances clients, suivi des paiements. <strong>Vous récupérez du temps pour votre activité principale.</strong></p>
                     </div>
                     <div class="service-card">
                         <div class="service-tag">Pilotage</div>
@@ -220,7 +220,7 @@
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 4rem; align-items: center; margin-bottom: 5rem;">
                         <div style="padding: 2.5rem; background: transparent; border-radius: 16px;">
                             <h4 style="font-size: 1.4rem; margin-bottom: 1rem; color: white;"><strong>Option 1 - Exécution seule</strong></h4>
-                            <p style="margin: 0; line-height: 1.8; font-size: 1.05rem; color: rgba(255,255,255,0.95);">Je prends en charge vos factures, relances clients et encodages précomptables. <strong>Vous êtes soulagé immédiatement</strong> et vous récupérez du temps pour votre activité principale. Vous êtes informé des opportunités d'amélioration observées, sans refonte imposée.</p>
+                            <p style="margin: 0; line-height: 1.8; font-size: 1.05rem; color: rgba(255,255,255,0.95);">Je prends en charge vos factures, relances clients et suivi des paiements. <strong>Vous êtes soulagé immédiatement</strong> et vous récupérez du temps pour votre activité principale. Vous êtes informé des opportunités d'amélioration observées, sans refonte imposée.</p>
                         </div>
                         <div style="text-align: center;">
                             <div class="services-difference-image">
@@ -256,7 +256,7 @@
                     </div>
                     
                     <div style="text-align: center; margin-top: 3rem; padding-top: 3rem; border-top: 1px solid rgba(255,255,255,0.2);">
-                        <p style="font-size: 1.1rem; margin-bottom: 2rem; line-height: 1.8; color: rgba(255,255,255,0.95); max-width: 800px; margin-left: auto; margin-right: auto;"><strong>Dans tous les cas, mon regard expert contribue à l'amélioration de votre organisation</strong>, basé sur quinze ans d'expérience terrain en comptabilité et gestion administrative. Vous décidez selon vos besoins et votre rythme.</p>
+                        <p style="font-size: 1.1rem; margin-bottom: 2rem; line-height: 1.8; color: rgba(255,255,255,0.95); max-width: 800px; margin-left: auto; margin-right: auto;"><strong>Dans tous les cas, mon regard expert contribue à l'amélioration de votre organisation</strong>, basé sur quinze ans d'expérience terrain en gestion administrative et financière. Vous décidez selon vos besoins et votre rythme.</p>
                         <div class="highlight-cta">
                             <a href="approche.html" class="btn btn-secondary" style="background: rgba(255,255,255,0.2); border-color: rgba(255,255,255,0.4); color: white; padding: 1rem 2rem; font-size: 1.05rem;">Découvrir mon approche complète</a>
                         </div>
@@ -280,7 +280,7 @@
     <!-- SEO Footer -->
     <section class="seo-footer">
         <div class="container">
-            <p><strong>Consultante administrative indépendante en Province de Liège</strong> : Services de gestion administrative courante (facturation, relances clients, encodages précomptables) et d'optimisation des processus pour les TPE, PME et indépendants. Ateliers pratiques pour intégrer de nouvelles compétences dans votre gestion quotidienne. Intervention sur Liège et la Province de Liège, déplacements possibles en Wallonie.</p>
+            <p><strong>Consultante administrative indépendante en Province de Liège</strong> : Services de gestion administrative courante (facturation, relances clients) et d'optimisation des processus pour les TPE, PME et indépendants. Ateliers pratiques pour intégrer de nouvelles compétences dans votre gestion quotidienne. Intervention sur Liège et la Province de Liège, déplacements possibles en Wallonie.</p>
         </div>
     </section>
 
