bannir les mots compta...v3

--- a/apropos.html
+++ b/apropos.html
@@ -195,7 +195,7 @@
                     </div>
                     <div class="credential-item">
                         <i class="fas fa-handshake"></i>
-                        <span>D'un rôle opérationnel en gestion financière interne à entrepreneure : confiance et transparence</span>
+                        <span>De la gestion financière interne à entrepreneure : confiance et transparence</span>
                     </div>
                 </div>
             </div>
