--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                     <div class="domain-item">
                         <i class="fas fa-file-invoice"></i>
                         <span>Gestion administrative opérationnelle</span>
-                        <small>Facturation, relances clients, encodages divers.</small>
-                            </div>
-                    <div class="domain-item">
+                            <small>Facturation, relances clients, suivi des paiements.</small>
+                                </div>
+                    <div class="domain-item">   
                         <i class="fas fa-chart-line"></i>
                         <span>Suivi financier et pilotage</span>
                         <small>Tableaux de bord, trésorerie, indicateurs clés, reporting.</small>
@@ -569,7 +569,7 @@
     <!-- SEO Footer -->
     <section class="seo-footer">
         <div class="container">
-            <p><strong>Consultante administrative indépendante en Province de Liège</strong> : Services de gestion administrative courante (facturation, relances clients,  ) et d'optimisation des processus pour les TPE, PME et indépendants. Ateliers pratiques pour intégrer de nouvelles compétences dans votre gestion quotidienne. Intervention sur Liège et la Province de Liège, déplacements possibles en Wallonie.</p>
+            <p><strong>Consultante administrative indépendante en Province de Liège</strong> : Services de gestion administrative courante (facturation, relances clients, suivi des paiements)   et d'optimisation des processus pour les TPE, PME et indépendants. Ateliers pratiques pour intégrer de nouvelles compétences dans votre gestion quotidienne. Intervention sur Liège et la Province de Liège, déplacements possibles en Wallonie.</p>
                 </div>
     </section>
 
