--- a/apropos.html
+++ b/apropos.html
@@ -194,7 +194,7 @@
                     </div>
                     <div class="credential-item">
                         <i class="fas fa-handshake"></i>
-                        <span>De la gestion financière interne à entrepreneure : confiance et transparence</span>
+                        <span>De financière interne à entrepreneure : confiance et transparence</span>
                     </div>
                 </div>
             </div>
