--- a/contact.html
+++ b/contact.html
@@ -372,7 +372,7 @@
     <!-- SEO Footer -->
     <section class="seo-footer">
         <div class="container">
-            <p><strong>Consultante administrative indépendante en Province de Liège</strong> : Services de gestion administrative courante (facturation, relances client    
+            <p><strong>Consultante administrative indépendante en Province de Liège</strong> : Services de gestion administrative courante (facturation, relances clients, suivi des paiements) et d'optimisation des processus pour les TPE, PME et indépendants. Ateliers pratiques pour intégrer de nouvelles compétences dans votre gestion quotidienne. Intervention sur Liège et la Province de Liège, déplacements possibles en Wallonie.</p>
     </section>
 
     <!-- Footer -->
