--- a/approche.html
+++ b/approche.html
@@ -160,7 +160,7 @@
                     <p>Consultante Administrative Indépendante</p>
                     <p>Adminetech SRL • BE1012.752.452</p>
                     <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.85;"><a href="https://www.chronobizz.be" target="_blank" rel="noopener noreferrer" style="color: var(--background); text-decoration: underline;">Chronobizz</a> - Logiciel de suivi du temps et de facturation</p>
-                    <p style="margin-top: 0.5rem; font-size: 0.85rem; opacity: 0.7;"><a href="#" id="tarifs-link" style="color: var(--background); text-decoration: none; border-bottom: 1px dotted rgba(255,255,255,0.5); cursor: pointer;">Tarifs détaillés</a></p>
+                    <p style="margin-top: 0.5rem; font-size: 0.85rem; opacity: 0.7; display: none;"><a href="#" id="tarifs-link" style="color: var(--background); text-decoration: none; border-bottom: 1px dotted rgba(255,255,255,0.5); cursor: pointer;">Tarifs détaillés</a></p>
                 </div>
                 <div class="footer-center">
                     <h4>Navigation</h4>
